--- a/app/src/main/res/layout/dvd_item.xml
+++ b/app/src/main/res/layout/dvd_item.xml
@@ -45,4 +45,26 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"/>
 
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/libraries"
+        android:layout_below="@id/status"
+        android:stretchColumns="2">
+
+        <!--<TableRow>
+            <TextView
+                android:id="@+id/nameLabel"
+                android:text="@string/name_label"
+                android:padding="3dip" />
+            <TextView
+                android:text="@string/library_status"
+                android:id="@+id/libraryStatusLabel"
+                android:gravity="right"
+                android:padding="3dip" />
+        </TableRow>-->
+
+    </TableLayout>
+
+
 </RelativeLayout>
