--- a/app/src/main/res/layout/dvd_item.xml
+++ b/app/src/main/res/layout/dvd_item.xml
@@ -45,13 +45,27 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"/>
 
-    <ImageView
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:id="@+id/relative_container"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/libraryIcon"
-        android:src="@drawable/ic_library"
         android:layout_alignRight="@id/status"
-        android:layout_below="@id/description"/>
+        android:layout_below="@id/description">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/libraryIcon"
+            android:src="@drawable/ic_library"/>
+
+        <ProgressBar
+            android:id="@+id/libraryProgress"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="visible"/>
+
+     </RelativeLayout>
 
 </RelativeLayout>
