--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,25 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/gray">
 
 
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/dvds"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:numColumns="1"/>
+
+        android:layout_alignParentLeft="true"
+        android:clipToPadding="false"
+        android:horizontalSpacing="@dimen/activity_horizontal_margin"
+        android:numColumns="1"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="16dp"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:id="@android:id/empty"
