--- a/app/src/main/res/layout/dvd_item.xml
+++ b/app/src/main/res/layout/dvd_item.xml
@@ -60,15 +60,17 @@
         </RelativeLayout>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/status"
             android:layout_below="@id/libraryIconContainer"
-            android:textColor="@android:color/holo_green_dark"
+            android:textColor="@color/green"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
+            android:textAlignment="center"
+            android:textStyle="bold"
             />
         </RelativeLayout>
 
