--- a/app/src/main/res/layout/dvd_item.xml
+++ b/app/src/main/res/layout/dvd_item.xml
@@ -64,12 +64,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/status"
             android:layout_below="@id/libraryIconContainer"
-            android:textColor="@color/green"
+            android:textColor="@color/black"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:textAlignment="center"
+            android:gravity="center"
             android:textStyle="bold"
             />
         </RelativeLayout>
