--- a/app/src/main/res/layout/activity_libraries.xml
+++ b/app/src/main/res/layout/activity_libraries.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.thehoick.evergreenflixq.Libraries">
+    tools:context="com.thehoick.evergreenflixq.Libraries"
+    android:background="@color/gray">
 
 
     <!--<ListView
@@ -14,9 +15,15 @@
         />-->
 
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/libraryDvdTitle"/>
+        android:id="@+id/libraryDvdTitle"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:background="@drawable/title_shadow"
+        android:layout_marginStart="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:padding="10dp"/>
 
     <TableLayout
         android:layout_width="match_parent"
@@ -24,21 +31,29 @@
         android:id="@+id/libraries"
         android:stretchColumns="2"
         android:layout_gravity="center_horizontal"
-        android:layout_below="@id/libraryDvdTitle">
+        android:layout_below="@id/libraryDvdTitle"
+        android:layout_marginStart="@dimen/activity_vertical_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/shadow"
+        android:paddingBottom="@dimen/activity_horizontal_margin">
 
         <TableRow android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/nameLabel"
                 android:text="@string/name_label"
-                android:padding="3dip"
-                android:layout_width="match_parent" />
+                android:padding="6dip"
+                android:layout_width="match_parent"
+                android:textStyle="bold"/>
             <TextView
                 android:text="@string/library_status"
                 android:id="@+id/libraryStatusLabel"
-                android:gravity="right"
+                android:layout_gravity="end"
                 android:padding="3dip"
-                android:layout_width="match_parent" />
+                android:layout_width="match_parent"
+                android:textStyle="bold"
+                android:layout_margin="@dimen/activity_horizontal_margin"/>
         </TableRow>
 
     </TableLayout>
