--- a/app/src/main/res/drawable/image_shadow.xml
+++ b/app/src/main/res/drawable/image_shadow.xml
@@ -15,7 +15,7 @@
         android:right="4dp">
         <shape
             android:shape="rectangle">
-            <solid android:color="@color/dark_gray"/>
+            <solid android:color="@color/dark_shadow_gray"/>
         </shape>
     </item>
 
