--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,4 +9,8 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/action_help"
+        android:title="@string/title_activity_help"
+        android:orderInCategory="99"
+        android:showAsAction="never" />
 </menu>
