--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -11,6 +11,10 @@
         android:showAsAction="never" />
     <item android:id="@+id/action_help"
         android:title="@string/title_activity_help"
+        android:orderInCategory="98"
+        android:showAsAction="never" />
+    <item android:id="@+id/action_feedback"
+        android:title="@string/action_feedback"
         android:orderInCategory="99"
         android:showAsAction="never" />
 </menu>
