--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,7 @@
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/devices.min.css" | prepend: site.baseurl }}">
 
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/imag/favicon.ico" type="image/x-icon">
+
 </head>
