--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrap">
         
-    <img src="img/stack_logo.svg" alt="" height="" border="0" width="75" />
+    <img src="/img/stack_logo.svg" alt="" height="" border="0" width="75" />
     Brought to you by <a href="http://thehoick.com">The Hoick...</a>
     </br>
     &copy; <script>document.write(new Date().getFullYear())</script>
