--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,30 @@
 
     <div class="page-content">
       <div class="wrap">
+    <div class="parallax">
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <img src="/img/stack_logo.svg" alt="" height="" border="0" width="75" />
+      <br/>
+      <h1>Evergreen FlixQ</h1>
+      <h3>Find DVDs In Your Queue At The Library</h3>
+    </div>
+
+    <div class="nav">
+      <a href="/">Home</a>
+      &nbsp;&nbsp;
+      <a href="/about">About</a>
+      &nbsp;&nbsp;
+      <a href="/help">Help</a>
+    </div>
+
       {{ content }}
+  </div>
       </div>
     </div>
 
