--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,8 @@
       <a href="/about">About</a>
       &nbsp;&nbsp;
       <a href="/help">Help</a>
+      &nbsp;&nbsp;
+      <a href="/blog">Blog</a>
     </div>
 
       {{ content }}
