--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -275,3 +275,30 @@ html, body {
     }
   }
 }
+
+.posts {
+  li {
+    margin-left: 60px;
+    padding-top: 40px;
+  }
+}
+
+.post {
+  max-width: 1000px;
+  margin: 0 auto;
+  font-size: 18px;
+  line-height: 22px;
+
+  p {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .post-header {
+    margin-top: 40px;
+  }
+
+  article {
+    padding: 40px;
+  }
+}
