--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
      _paq.push(['setSiteId', 1]);
      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
      g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+     cosnole.log('piwiking...');
      })();
   </script>
   <noscript><p><img src="//www.thehoick.com/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
