--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,12 @@
    })();
 </script>
 <noscript><p><img src="//www.thehoick.com/piwik/piwik.php?idsite=3" style="border:0;" alt="" /></p></noscript>
+
+<noscript>
+  <!-- Piwik Image Tracker-->
+  <img src="http://www.thehoick.com/piwik/piwik.php?idsite=3&rec=1" style="border:0" alt="" />
+  <!-- End Piwik -->
+</noscript>
 <!-- End Piwik Code -->
 <footer class="site-footer">
 
